--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </a> -->
 
 
-                <a href="https:/tahunbaru.netlify.com" target="_blank" rel="noopener">
+                <a href="https://tahunbaru.netlify.com" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #858585, #b5b5b5);">
                         <span class="new">ID</span>
