--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>freqtion</title>
+     <title>raharrjas | freqtion</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="icon" href="https://i.ibb.co/PG0h1xf/download.png">
@@ -21,7 +21,7 @@
         <header>
             <a href="https://www.instagram.com/freqtion/" target="_blank" rel="noopener">
                 <img src="https://i.ibb.co/9YXS9mm/181705067-778968996323420-3732982900798484511-n.jpg" alt="@freqtion">
-                <h1>freqtion</h1>
+                <h1>freqtion / raharrjas</h1>
                 <!-- <p>links n stuf</p> -->
             </a>
 
@@ -44,7 +44,7 @@
                     <i data-feather="twitter"></i>
                     </li>
                     <h2>Twitter</h2>
-                    <span class='username'>@viiouus</span>
+                    <span class='username'>@fiiouus</span>
                 </a>
 
 <!-- 
