update names & add spotify

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 <body>
     <main>
         <header>
-            <a href="https://www.instagram.com/freqtion/" target="_blank" rel="noopener">
+            <a href="https://www.instagram.com/raaharja/" target="_blank" rel="noopener">
                 <img src="https://i.ibb.co/9YXS9mm/181705067-778968996323420-3732982900798484511-n.jpg" alt="@freqtion">
-                <h1>freqtion / raharrjas</h1>
+                <h1>raaharja / freqtion</h1>
                 <!-- <p>links n stuf</p> -->
             </a>
 
         </header>
-        <!-- <h1 class='titulo-sep'>Links and Stuf</h1> -->
+        <!-- <h1 class='titulo-sep'>Links and Stuff</h1> -->
         <section>
             <ul>
 
@@ -38,13 +38,13 @@
                     <h2>Instagram</h2>
                     <span class='username'>@freqtion</span>
                 </a>
-                <a href="https://www.twitter.com/viiouus/" target="_blank" rel="noopener">
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener">
                     <li
                     style="background: linear-gradient(to right, #00e1ff, #a4aeff);">   
                     <i data-feather="twitter"></i>
                     </li>
                     <h2>Twitter</h2>
-                    <span class='username'>@fiiouus</span>
+                    <span class='username'>no :)</span>
                 </a>
 
 <!-- 
@@ -85,6 +85,15 @@
                         <i data-feather="clock"></i>
                     </li>
                     <h2>2021 Countdown</h2>
+                </a> 
+
+                <a href="https://open.spotify.com/user/alm4b0oqld8z09rgtgcnzdhng?si=RM9LjZFqT2melnQ7hW_WTg&utm_source=copy-link" target="_blank" rel="noopener">
+                    <li
+                        style="background: linear-gradient(to right, #a9ff85, #7efc87);">
+                        
+                        <i data-feather="music"></i>
+                    </li>
+                    <h2>Spotify</h2>
                 </a> 
             </ul>
         </section>
