--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
      <title>raharrjas | freqtion</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <script src="https://kit.fontawesome.com/9d7e57a70d.js" crossorigin="anonymous"></script>
     <link rel="icon" href="https://i.ibb.co/PG0h1xf/download.png">
     <script data-ad-client="ca-pub-4112379766065410" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">   <script src="https://unpkg.com/feather-icons"></script> 
@@ -90,8 +91,9 @@
                 <a href="https://open.spotify.com/user/alm4b0oqld8z09rgtgcnzdhng?si=RM9LjZFqT2melnQ7hW_WTg&utm_source=copy-link" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #a9ff85, #7efc87);">
-                        
-                        <i data-feather="music"></i>
+                        <i class="fa-brands fa-spotify" style="color:#fff"></i>
+ <!--                       <i data-feather="music"></i>
+ -->
                     </li>
                     <h2>Spotify</h2>
                 </a> 
