--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <a href="https://open.spotify.com/user/alm4b0oqld8z09rgtgcnzdhng?si=RM9LjZFqT2melnQ7hW_WTg&utm_source=copy-link" target="_blank" rel="noopener">
                     <li
                         style="background: linear-gradient(to right, #a9ff85, #7efc87);">
-                        <i class="fa-brands fa-spotify" style="color:#fff"></i>
+                        <i class="fa-brands fa-spotify fa-4x" style="color:#fff"></i>
  <!--                       <i data-feather="music"></i>
  -->
                     </li>
