--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <header>
             <a href="https://www.instagram.com/raaharja/" target="_blank" rel="noopener">
                 <img src="https://i.ibb.co/9YXS9mm/181705067-778968996323420-3732982900798484511-n.jpg" alt="@freqtion">
-                <h1>raaharja / freqtion</h1>
-                <!-- <p>links n stuf</p> -->
+                <h1>raaharja</h1>
+                <p>?</p>
             </a>
 
         </header>
@@ -31,13 +31,13 @@
         <section>
             <ul>
 
-                <a href="https://www.instagram.com/freqtion/" target="_blank" rel="noopener">
+                <a href="https://www.instagram.com/raaharja/" target="_blank" rel="noopener">
                     <li
                     style="background: linear-gradient(to right, #aa00ff, #ff652d);">   
                     <i data-feather="instagram"></i>
                     </li>
                     <h2>Instagram</h2>
-                    <span class='username'>@freqtion</span>
+                    <span class='username'>@raaharja2</span>
                 </a>
                 <a href="https://www.twitter.com/" target="_blank" rel="noopener">
                     <li
@@ -100,7 +100,7 @@
             </ul>
         </section>
         <h4 class='codeby'>Website created by <wbr> <a style="color:#8e2de2"; href="https://www.instagram.com/freqtion/">@freqtion</a><wbr></h4>
-        <p class='codebyp'>Made with love</p>
+        <p class='codebyp'>Made with codee</p>
     </main>
     <script>
         const d = new Date();
