--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
                     <i data-feather="instagram"></i>
                     </li>
                     <h2>Instagram</h2>
-                    <span class='username'>@raaharja2</span>
+                    <span class='username'>@raaharja</span>
                 </a>
-                <a href="https://www.twitter.com/" target="_blank" rel="noopener">
+                <a href="https://wa.me/+6283897966353" target="_blank" rel="noopener">
                     <li
                     style="background: linear-gradient(to right, #00e1ff, #a4aeff);">   
-                    <i data-feather="twitter"></i>
+                    <i class="fa-brands fa-spotify fa-3x" style="color:#fff"></i>
                     </li>
-                    <h2>Twitter</h2>
-                    <span class='username'>no :)</span>
+                    <h2>Whatsapp</h2>
+                    <span class='username'> </span>
                 </a>
 
 <!-- 
