--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="https://www.instagram.com/raaharja/" target="_blank" rel="noopener">
                 <img src="https://i.ibb.co/9YXS9mm/181705067-778968996323420-3732982900798484511-n.jpg" alt="@freqtion">
                 <h1>raaharja</h1>
-                <p>?</p>
+                <p>👋</p>
             </a>
 
         </header>
@@ -42,7 +42,7 @@
                 <a href="https://wa.me/+6283897966353" target="_blank" rel="noopener">
                     <li
                     style="background: linear-gradient(to right, #00e1ff, #a4aeff);">   
-                    <i class="fa-brands fa-spotify fa-3x" style="color:#fff"></i>
+                    <i class="fa-brands fa-whatsapp fa-3x" style="color:#fff"></i>
                     </li>
                     <h2>Whatsapp</h2>
                     <span class='username'> </span>
